--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         <section id="principal">
             <div class="container">
                 <div class="row ">
-                    <div class=" bg-warning mt-auto col-md-12 d-flex justify-content-center ">
-                        
-                        <div class=" align-self-center"  >
-                            teste
-                        </div>
+                    <div class="aign-self-center">
+                        <input onkeydown="verificacaoAltura()" id="altura" type="text">
+                        <input id="largura" type="text">
+                        <input id="te" type="text">
+                        <input id="td" type="text">
+                        <input id="be" type="text">
+                        <input id="bd" type="text">
                     </div>
                 </div>
             </div>
